# ppgca

./: .gitignore  README.md
cav-dados/mongodb/: compose.yml
cav-dados/news-sentiment/: README.md  pyproject.toml
cav-dados/news-sentiment/api/: main.py
cav-dados/news-sentiment/api/controllers/: data_controller.py
cav-dados/news-sentiment/api/models/: news.py
cav-dados/news-sentiment/api/routers/: category.py  root.py
cav-dados/news-sentiment/src/: main.py
cav-dados/news-sentiment/src/controllers/: scrapping.py
cav-dados/projeto/: README.md  main.py  readme.txt  requirements.txt  scraping.py
cav-dados/projeto-finance/: .env.example  Makefile  README.md  pyproject.toml
cav-dados/projeto-finance/docker/: compose.dev.yml  compose.prod.yml  compose.yml  python-dockerfile
cav-dados/projeto-finance/src/: main.py
cav-dados/projeto-finance/src/api/: main.py
cav-dados/projeto-finance/src/api/models/: ibov.py  news.py
cav-dados/projeto-finance/src/api/routers/: ibov.py  news.py
cav-dados/projeto-finance/src/predict/: sentiment_predict.py
cav-dados/projeto-finance/src/repository/: ibovespa_repository.py  news_repository.py
cav-dados/projeto-finance/src/services/: consumer_service.py  producer_service.py
cav-dados/tarefas/: fosp.ipynb  pyproject.toml  scrapping-api.py
machine-learning/predicao_serie/: Exemplo MLP Predição Séries.ipynb  pyproject.toml
machine-learning/projeto/: pyproject.toml
machine-learning/projeto/notebook/: anomalia.ipynb
programacao-algoritmos/projeto-arvore/: README.md  pyproject.toml
programacao-algoritmos/projeto-arvore/notebook/: analise.ipynb
programacao-algoritmos/projeto-arvore/src/: algoritmos_recursao.py  arvores.py  main.py  main_order.py  utils.py
programacao-algoritmos/projeto-ordenacao/: README.md  pyproject.toml
programacao-algoritmos/projeto-ordenacao/data/: result_dict.pkl
programacao-algoritmos/projeto-ordenacao/notebook/: analise_resultados.ipynb
programacao-algoritmos/projeto-ordenacao/src/: algoritmos_ordenacao.py  run.py  util.py
programacao-algoritmos/tarefas/: alg-guloso.py  forca-bruta.py  soma-maxima.py  tarefa-fila.py  tarefa1.py
programacao-algoritmos/tarefas/grafos/: README.md  grafos.py  pyproject.toml
