[tool.poetry]
name = "news-sentiment"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = "^0.30.6"
beautifulsoup4 = "^4.12.3"
polars = "^1.5.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
