[tool.poetry]
name = "cav-dados"
version = "0.1.0"
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
ydata-profiling = "^4.9.0"
ipywidgets = "^8.1.3"
beautifulsoup4 = "^4.12.3"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
