[tool.poetry]
name = "projeto-arvore"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.8.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
