[tool.poetry]
name = "projeto-1"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.6.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
